fix: alter menu to collapse on mobile devices

--- a/src/app/shared/menu-bar/menu-bar.component.css
+++ b/src/app/shared/menu-bar/menu-bar.component.css
@@ -6,7 +6,7 @@
     background-color: #FEFEFE;
     translate: -.75rem 0;
     padding-bottom: .5rem;
-    transition: translate .5s ease-in-out;
+    transition: translate .35s ease-in-out;
     color: #757575;
 }
 
